# searchop

./: .gitignore  ADDRESSING_CONCERNS.md  DEPLOYMENT_STATUS.md  IMPLEMENTATION_COMPLETE.md  Makefile  PRODUCTION_READINESS.md  PRODUCTION_READY_UPGRADES.md  QUICK_DEPLOY_CHECKLIST.md  QUICK_START.md  README.md  TESTING_SUMMARY.md  dagster.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
artifacts/: .gitkeep
data/eval/: .gitkeep
data/processed/: .gitkeep  feature_store_sample.csv
data/raw/: .gitkeep
docker/: Dockerfile.api
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOY_AWS_EKS.md  DEPLOY_EKS_STEP_BY_STEP.md  DEPLOY_LOCAL_K8S.md  INSTALL_PREREQUISITES.md  INSTALL_TERRAFORM_WINDOWS.md  MLOPS_TESTING.md  TESTING.md
infra/aws/: README.md  main.tf  outputs.tf  variables.tf
infra/local-cluster/: kind-config.yaml  setup.sh  teardown.sh
k8s/: deployment-api.yaml  hpa-api.yaml  kustomization.yaml  service-api.yaml
memory-bank/: activeContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
models/: .gitkeep
scripts/: deploy_to_eks.sh  generate_demo_data.py  install_terraform_windows.sh  load_test.py  run_demo.sh  verify_production_readiness.py
src/: __init__.py
src/api/: main.py  monitoring.py  router_rank.py  schemas.py
src/data_ingestion/: build_feature_store.py  generate_synthetic_data.py
src/models/: evaluate_model.py  inference.py  train_ranking_model.py
src/pipelines/: __init__.py  dagster_pipeline.py
src/utils/: config.py  logging_utils.py
tests/: __init__.py  conftest.py
(+11 files in other folders)
